force-app/main/default/objects/Negoptim__Assortment_BU__c/Negoptim__Assortment_BU__c.object-meta.xml
<CustomObject>
    <label>Assortment BU</label>
    <nameField>
        <label>Assortment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assortment BU</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>