force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Ass_BDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ass_BDate__c</fullName>
    <label>Begin Date</label>
    <type>Date</type>
</CustomField>