force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Ass_EDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ass_EDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>