force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__AutoNum__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__AutoNum__c</fullName>
    <externalId>true</externalId>
    <label>AutoNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>