force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__BU_Target__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__BU_Target__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Budget = HMSM + DRIVE, PROXI, WEB, CASH &amp; CARRY.  /  
target/ Nego =Banner(ex. Carrefour HM, Carrefour SM, Intermarché.fr).  /  

Saisir &apos;..&apos; pour accéder à l&apos;ensemble des BU possibles pour le type choisi.</inlineHelpText>
    <label>BU Target</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 AND 2 AND 3) OR (4 AND 5) OR (6 AND 7))</booleanFilter>
        <errorMessage>BU_Target__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Negoptim__Orga_BU__c.Negoptim__Set_Assortment_Budget_BU_Target__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Budget</value>
        </filterItems>
        <filterItems>
            <field>Negoptim__Orga_BU__c.Negoptim__IsMasterBU__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Conso Target, Target</value>
        </filterItems>
        <filterItems>
            <field>Negoptim__Orga_BU__c.Negoptim__Set_Assortment_Target_BU_Target__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Conso Target, Budget, Target</value>
        </filterItems>
        <filterItems>
            <field>Negoptim__Orga_BU__c.Negoptim__Set_Assortment_Nego_BU_Target__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Negoptim__Orga_BU__c</referenceTo>
    <relationshipName>Assortment_BU1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>