force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Client_Clust2__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Client_Clust2__c</fullName>
    <label>Client Clust2</label>
    <summaryFilterItems>
        <field>Negoptim__Assortment_Detail__c.Negoptim__Client_Clust2__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Negoptim__Assortment_Detail__c.Negoptim__Assortment_BU__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>