force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Client_Clust3__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Client_Clust3__c</fullName>
    <label>Client Clust3</label>
    <summaryForeignKey>Negoptim__Assortment_Detail__c.Negoptim__Assortment_BU__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>