force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Collection_type__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Collection_type__c</fullName>
    <label>Collection type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>Promo</fullName>
            </value>
            <value>
                <fullName>Introduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>