force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Contract__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Negoptim__Contract__c</referenceTo>
    <relationshipLabel>Assortiments BU</relationshipLabel>
    <relationshipName>Assortiments_BU</relationshipName>
    <type>Lookup</type>
</CustomField>