force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Contract_Active_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Contract_Active_Discounts__c</fullName>
    <description>Active Discounts from contract  in Json format</description>
    <label>Contract Active Discounts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>