force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Fact_WD_MarketBased__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Fact_WD_MarketBased__c</fullName>
    <label>Fact WD MarketBased</label>
    <summarizedField>Negoptim__Assortment_Detail__c.Negoptim__Fact_WD_MarketBased__c</summarizedField>
    <summaryFilterItems>
        <field>Negoptim__Assortment_Detail__c.Negoptim__Version__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Negoptim__Assortment_Detail__c.Negoptim__Assortment_BU__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>