force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Is_Detail_Recently_updated__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Is_Detail_Recently_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when detail line(s) has been recently updated in specific status</description>
    <label>Is Detail Recently updated</label>
    <type>Checkbox</type>
</CustomField>