force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Logo__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Logo__c</fullName>
    <label>Logo</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>