force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Merch_Family__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Merch_Family__c</fullName>
    <label>Merch Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Merch_Family</valueSetName>
    </valueSet>
</CustomField>