force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Name_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Name_Prefix__c</fullName>
    <description>Used to generate the name of assortment.</description>
    <formula>CASE(RecordType.DeveloperName, 
&quot;Budget&quot;, $Label.negoptim__RT_Assortment_Budget, 
&quot;Conso&quot;, $Label.negoptim__RT_Assortment_Conso, 
&quot;L4L&quot;, $Label.negoptim__RT_Assortment_Like4Like, 
&quot;Nego&quot;, $Label.negoptim__RT_Assortment_Nego, 
&quot;Target&quot;, $Label.negoptim__RT_Assortment_Target,
&quot;Conso_Target&quot;, $Label.negoptim__RT_Assortment_Conso_Target, 
&quot;Panel&quot;, $Label.negoptim__RT_Assortment_Panel,
&quot;PR&quot;, $Label.negoptim__RT_Assortment_PR,
&quot;Simulation&quot;, $Label.negoptim__RT_Assortment_Simulation,
&quot;Conso_Simulation&quot;, $Label.negoptim__RT_Assortment_Conso_Simulation, &quot;&quot;)
+ &quot;-&quot; 
+ Negoptim__BU_Target__r.Name 
+ &quot;-&quot; 
+ Negoptim__Orga_HE__r.Name 
+ &quot;-&quot; 
+ Negoptim__Year_String__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Prefix</label>
    <type>Text</type>
</CustomField>