force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Recent_Detail_updates__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Recent_Detail_updates__c</fullName>
    <description>Summarize detail update from last run cession</description>
    <label>Recent Detail updates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>