force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Recent_Detail_Updates_Date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Recent_Detail_Updates_Date__c</fullName>
    <description>Give the last validation date of one of the row detail</description>
    <inlineHelpText>Give the last validation date of one of the row detail</inlineHelpText>
    <label>Recent Detail Updates Date</label>
    <type>Date</type>
</CustomField>