force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Simulation_version__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Simulation_version__c</fullName>
    <label>Simulation version</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>