force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Status__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Negoptim__Assortment_type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open (in bulding process)</fullName>
                <default>true</default>
                <label>Open (in bulding process)</label>
            </value>
            <value>
                <fullName>Request for Approval</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Signed IN</fullName>
            </value>
            <value>
                <fullName>Signed OUT</fullName>
            </value>
            <value>
                <fullName>Closed (Upgraded version)</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>