force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Target_Simulation__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Target_Simulation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to select &amp; aggregate different simulation to category</description>
    <inlineHelpText>Identification en Cible de la DV Négo proposée. La DV Négo proposée Cible alimente le Reporting jusqu’au passage en statut validé.</inlineHelpText>
    <label>Target Simulation</label>
    <type>Checkbox</type>
</CustomField>