force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__WD_Equal_Null_Counter__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__WD_Equal_Null_Counter__c</fullName>
    <label>WD_Equal_Null_Counter</label>
    <summaryFilterItems>
        <field>Negoptim__Assortment_Detail__c.Negoptim__Version__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Negoptim__Assortment_Detail__c.Negoptim__New_Client_WD_MarketBased__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Negoptim__Assortment_Detail__c.Negoptim__Assortment_BU__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>