force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Year__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Year__c</fullName>
    <description>Campaign year</description>
    <inlineHelpText>Campaign year</inlineHelpText>
    <label>Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>