force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/Negoptim__Year_String__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Year_String__c</fullName>
    <formula>TEXT(Negoptim__Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year String</label>
    <type>Text</type>
</CustomField>