force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/SPKERC_SumNewClientNDCltBasedPtsGapNegoP__c.field-meta.xml
<CustomField>
    <fullName>SPKERC_SumNewClientNDCltBasedPtsGapNegoP__c</fullName>
    <label>Ecart DN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>