force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/SPKERC_SumNewClientQuantityYE__c.field-meta.xml
<CustomField>
    <fullName>SPKERC_SumNewClientQuantityYE__c</fullName>
    <description>It is the sum of new client quantity YE field</description>
    <label>Quantités +/-</label>
    <summarizedField>Negoptim__Assortment_Detail__c.Negoptim__New_Client_Quantity_YE__c</summarizedField>
    <summaryForeignKey>Negoptim__Assortment_Detail__c.Negoptim__Assortment_BU__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>