force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/SPKERCADELACLevel__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACLevel__c</fullName>
    <label>SPKERCADELAC Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>