force-app/main/default/objects/Negoptim__Assortment_BU__c/fields/SPKERCADELACVersionforcompilation__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACVersionforcompilation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPKERCADELAC Version Ok for compilation</label>
    <type>Checkbox</type>
</CustomField>