force-app/main/default/objects/Negoptim__Assortment_BU__c/recordTypes/Negoptim__Budget.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Budget</fullName>
    <active>true</active>
    <description>Objective (or budget) between the group and the market base</description>
    <label>Budget</label>
</RecordType>