force-app/main/default/objects/Negoptim__Assortment_BU__c/recordTypes/Negoptim__Conso.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Conso</fullName>
    <active>true</active>
    <description>Aggregate client segmented assortments</description>
    <label>Conso</label>
</RecordType>