force-app/main/default/objects/Negoptim__Assortment_BU__c/recordTypes/Negoptim__Conso_Simulation.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Conso_Simulation</fullName>
    <active>true</active>
    <description>Aggregate client segmented simulation assortments</description>
    <label>Conso Simulation</label>
</RecordType>