force-app/main/default/objects/Negoptim__Assortment_BU__c/recordTypes/Negoptim__Conso_Target.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Conso_Target</fullName>
    <active>true</active>
    <description>Aggregate client segmented target assortments</description>
    <label>Conso Target</label>
</RecordType>