force-app/main/default/objects/Negoptim__Assortment_BU__c/recordTypes/Negoptim__Nego.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Nego</fullName>
    <active>true</active>
    <description>Objective (budget) construction for the client</description>
    <label>Nego</label>
</RecordType>