force-app/main/default/objects/Negoptim__Assortment_BU__c/recordTypes/Negoptim__Panel.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Panel</fullName>
    <active>false</active>
    <description>Assortments with Panelist data only</description>
    <label>Panel</label>
</RecordType>