force-app/main/default/objects/Negoptim__Assortment_BU__c/recordTypes/Negoptim__PR.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__PR</fullName>
    <active>true</active>
    <description>Copy of Target</description>
    <label>PR</label>
</RecordType>