force-app/main/default/objects/Negoptim__Assortment_BU__c/recordTypes/Negoptim__Simulation.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Simulation</fullName>
    <active>true</active>
    <description>for any simulation, used automatically when cloning Target Assortment</description>
    <label>Simulation</label>
</RecordType>