force-app/main/default/objects/Negoptim__Assortment_BU__c/recordTypes/Negoptim__Target.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Target</fullName>
    <active>true</active>
    <description>Objective declination on a banner</description>
    <label>Target</label>
</RecordType>