force-app/main/default/objects/Negoptim__Assortment_BU__c/validationRules/Negoptim__Begin_Date_Inferior_Or_Equal_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Negoptim__Begin_Date_Inferior_Or_Equal_End_Date</fullName>
    <active>true</active>
    <description>Validation to restrict error on entering dates, begin date should be inferior or equal the end date of the assortment.</description>
    <errorConditionFormula>Negoptim__Ass_EDate__c &lt;  Negoptim__Ass_BDate__c</errorConditionFormula>
    <errorDisplayField>Negoptim__Ass_EDate__c</errorDisplayField>
    <errorMessage>The End Date should be superior or equal to the Begin Date.</errorMessage>
</ValidationRule>